take out not used component

--- a/PlayGround/package.json
+++ b/PlayGround/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "description": "Template project",
+  "description": "Playground project",
   "author": "zlu",
   "private": true,
   "scripts": {
